--- a/index.html
+++ b/index.html
@@ -17,56 +17,161 @@
 
 <body
     class="bg-gray-900 text-white bg-cover bg-center bg-no-repeat bg-fixed overflow-y-auto transition-all duration-500 ease-in-out">
+
     <div class="min-h-screen w-full">
-        <header
-            class="w-full flex flex-col sm:flex-row items-center justify-between gap-4 p-4  backdrop-blur-xl sticky top-0 bg-black/30">
-            <h1 class="min-w-36">Weather Dashboard</h1>
-            <div class="w-full sm:w-auto sm:place-items-end relative">
-                <form id="search-form" class="flex gap-x-3 font-semibold text-white ">
-                    <input type="search" name="city-input" id="cityInput" placeholder="Search for any city..."
-                        class="w-full sm:w-[30vh] lg:w-[40vh] rounded-full border border-gray-600 bg-transparent px-4 py-1 focus:outline-none placeholder-gray-300">
-                    <button type="submit" id=seach-btn
-                        class="bg-blue-500 rounded-md py-1 px-2 text-white hover:bg-blue-600" title="Search cities">
-                        <span class="hidden sm:inline">Search</span>
-                        <span class="inline sm:hidden"><img src="./assets/./icons/search.svg"
-                                alt="Search button"></span>
-                    </button>
-                    <button type="button" id="currentLocation-btn" title="Use my location"
-                        class="bg-red-500 rounded-md py-1 px-2 hover:bg-red-600" title="Use my location">
-                        <span class="hidden sm:inline">Use my location</span>
-                        <span class="inline sm:hidden"><img src="./assets/icons/Location.svg"
-                                alt="Use current location"></span>
-                    </button>
-                </form>
-                <div id="suggestion-box"
-                    class="absolute left-0 mt-2 bg-black/50 h-10 z-20 w-8/10 sm:w-[30vh] lg:w-[40vh] rounded-2xl border border-white/20 shadow-lg overflow-auto hidden">
-                </div>
-            </div>
-        </header>
 
-        <main class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-col-3 gap-4 lg-gap-8">
-            <div class="lg:col-span-2 space-y-8">
-                <div
-                    class="flex flex-col md:flex-row items-center p-6 md:p-8 rounded-3xl shadow-2xl text-shadow-[2px_2px_5px_rgb(0,0,0,0.4)] card">
-                    <div class="text-center md:text-left">
-                        <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
-                        <p id="CurrentDate" class="text-base sm:text-lg text-gray-300">
-                            Monday, September 07
-                        </p>
-                        <p id="CurrentDegree" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
-                            0 ℃
-                        </p>
-                        <p id="CurrentDate" class="text-xl sm:text-2xl mt-2">
-                            Weather
-                        </p>
+        <div id="loading-overlay"
+            class="fixed inset-0 bg-gray-900 opacity-80 flex-col gap-y-3 items-center justify-center z-50 hidden ">
+            <div
+                class="w-12 h-12 border-8 border-blue-500 border-dotted rounded-full animate-spin [animation-duration:3s] ">
+            </div>
+            <p class="text-xl">Fetching Your Weather</p>
+
+        </div>
+
+        <div id="error-modal" class="fixed inset-0 justify-center items-center hidden">
+            <div class="bg-red-600 border border-red-400 rounded-lg shadow-xl p-6 w-11/12 md:w-1/3 text-center">
+                <h3 class="text-2xl font-bold mb-4">Oops! Something went wrong</h3>
+                <p id="errorMessage" class="mb-6">Could not fetch weather data</p>
+            </div>
+        </div>
+
+        <div class="opacity-100">
+            <header
+                class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
+                <h1 class="min-w-44 text-2xl font-bold">🌤️ Weather App</h1>
+                <div class="w-full md:w-auto sm:place-items-end relative">
+                    <form id="search-form" class="flex gap-x-3 font-semibold text-white w-full">
+                        <input type="search" name="city-input" id="city-input" placeholder="Search for any city..."
+                            class="w-full md:w-[30vw] lg:w-[40vw] rounded-full border border-gray-600 bg-transparent px-4 py-2 focus:outline-none placeholder-gray-300">
+                        <button type="submit" id=seach-btn
+                            class="bg-blue-500 rounded-md py-1 px-2 text-white hover:bg-blue-600" title="Search cities">
+                            <span class="hidden md:inline">Search</span>
+                            <span class="inline md:hidden"><img src="./assets/./icons/search.svg"
+                                    alt="Search button"></span>
+                        </button>
+                        <button type="button" id="currentLocation-btn" title="Use my location"
+                            class="bg-red-500 rounded-md py-1 px-2 hover:bg-red-600" title="Use my location">
+                            <span class="hidden md:inline">Use my location</span>
+                            <span class="inline md:hidden"><img src="./assets/icons/Location.svg"
+                                    alt="Use current location"></span>
+                        </button>
+                    </form>
+                    <div id="suggestion-box"
+                        class="absolute left-0 mt-2 bg-black/50 h-10 z-20 w-8/10 sm:w-[30vh] lg:w-[40vh] rounded-2xl border border-white/20 shadow-lg overflow-auto hidden">
                     </div>
-
-                    <img src="" alt="Weather icon" id="currentWeather-icon"
-                        class="w-32 sm:w-48 md:w-64 aspect-square mt-6 md:mt-0">
                 </div>
-            </div>
-        </main>
-    </div>
+            </header>
+
+            <main
+                class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-col-3 gap-4 lg-gap-8 p-4 md:p-8 transition-opacity duration-500 mb-5">
+                <div class="lg:col-span-2 space-y-8">
+                    <div
+                        class="flex flex-col md:flex-row items-center p-6 md:p-8 rounded-3xl shadow-2xl text-shadow-[2px_2px_5px_rgb(0,0,0,0.4)] card">
+                        <div class="text-center md:text-left">
+                            <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
+                            <p id="currentDate" class="text-base sm:text-lg text-gray-300">
+                                Monday, September 07
+                            </p>
+                            <p id="currentTemp" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
+                                0 ℃
+                            </p>
+                            <p id="currentWeatherCondition" class="text-xl sm:text-2xl mt-2">
+                                Weather
+                            </p>
+                        </div>
+
+                        <img src="" alt="Weather icon" id="currentWeather-icon"
+                            class="w-32 sm:w-48 md:w-64 aspect-square mt-6 md:mt-0">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold mb-4 text-shadow">
+                            5-Days Forecast
+                        </h3>
+                        <div id="forecast-container"
+                            class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-2 sm:gap-4">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col">
+                    <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col space-y-5 card">
+                        <div class="grid grid-cols-2 gap-6 text-center">
+                            <div>
+                                <p class="text-gray-300 text-sm">Sunrise</p>
+                                <p id="sunriseTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                            </div>
+                            <div>
+                                <p class="text-gray-300 text-sm">Sunset</p>
+                                <p id="sunsetTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                            </div>
+                        </div>
+
+                        <div class="border-t border-white/20 pt-5 space-y-4 text-base lg:text-lg">
+                            <!-- Weather Details -->
+                            <div class="flex items-center justify-between ">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Humidity</p>
+                                </div>
+                                <span id="humidity">--%</span>
+                            </div>
+
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Wind</p>
+                                </div>
+                                <span id="windSpeed">--km/h</span>
+                            </div>
+
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Feels Like</p>
+                                </div>
+                                <span id="feelsLike">--℃</span>
+                            </div>
+
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Pressure</p>
+                                </div>
+                                <span id="pressure">--hPa</span>
+                            </div>
+
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Visibility</p>
+                                </div>
+                                <span id="visibility">--km</span>
+                            </div>
+
+                            <div class="flex items-center justify-between">
+                                <div class="flex items-center gap-2">
+                                    <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
+                                    <p class="text-slate-200">Air Quality</p>
+                                </div>
+                                <span id="airQuality"
+                                    class="font-semibold px-3 py-1 rounded-full text-sm">--km</span>
+                            </div>
+                        </div>
+
+
+                        <div class="border-t border-white/20 pt-5">
+                            <h3 class="text-lg font-bold mb-2">Health Recommendations</h3>
+                            <div>
+                                <p id="health-recommendations" class="text-gray-200 text-sm">Loading recommendations ...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+
+
+        </div>
 </body>
 
 </html>
