--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body
     class="bg-gray-900 text-white bg-cover bg-center bg-no-repeat bg-fixed overflow-y-auto transition-all duration-500 ease-in-out">
 
-    <div class="min-h-screen w-full">
+    <div class="min-h-screen w-full max-w-7xl m-auto">
 
         <div id="loading-overlay"
             class="fixed inset-0 bg-gray-900 opacity-80 flex-col gap-y-3 items-center justify-center z-50 hidden ">
@@ -29,149 +29,163 @@
 
         </div>
 
-        <div id="error-modal" class="fixed inset-0 justify-center items-center hidden">
-            <div class="bg-red-600 border border-red-400 rounded-lg shadow-xl p-6 w-11/12 md:w-1/3 text-center">
+        <dialog id="error-modal" class="border m-auto rounded-xl transform duration-300 ease-out scale-0">
+            <div class="bg-red-600 border border-red-400 rounded-lg shadow-xl p-6 text-center text-white">
                 <h3 class="text-2xl font-bold mb-4">Oops! Something went wrong</h3>
                 <p id="errorMessage" class="mb-6">Could not fetch weather data</p>
+                <button id="close-modalBtn" type="button"
+                    class="px-5 py-1.5 bg-black/80 rounded-3xl hover:bg-gray-700 focus:outline-none">
+                    Close
+                </button>
             </div>
-        </div>
+        </dialog>
 
-        <div class="opacity-100">
-            <header
-                class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
-                <h1 class="min-w-44 text-2xl font-bold">🌤️ Weather App</h1>
-                <div class="w-full md:w-auto sm:place-items-end relative">
-                    <form id="search-form" class="flex gap-x-3 font-semibold text-white w-full">
+        <header
+            class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
+            <h1 class="min-w-44 text-2xl font-bold">🌤️ Weather App</h1>
+            <div class="w-full md:w-auto sm:place-items-end">
+                <form id="search-form" class="flex gap-x-3 font-semibold text-white w-full">
+
+                    <!-- Wrap input in relative container -->
+                    <div class="relative w-full md:w-[40vw] md:max-w-[510px]">
                         <input type="search" name="city-input" id="city-input" placeholder="Search for any city..."
-                            class="w-full md:w-[30vw] lg:w-[40vw] rounded-full border border-gray-600 bg-transparent px-4 py-2 focus:outline-none placeholder-gray-300">
-                        <button type="submit" id=seach-btn
-                            class="bg-blue-500 rounded-md py-1 px-2 text-white hover:bg-blue-600" title="Search cities">
-                            <span class="hidden md:inline">Search</span>
-                            <span class="inline md:hidden"><img src="./assets/./icons/search.svg"
-                                    alt="Search button"></span>
-                        </button>
-                        <button type="button" id="currentLocation-btn" title="Use my location"
-                            class="bg-red-500 rounded-md py-1 px-2 hover:bg-red-600" title="Use my location">
-                            <span class="hidden md:inline">Use my location</span>
-                            <span class="inline md:hidden"><img src="./assets/icons/Location.svg"
-                                    alt="Use current location"></span>
-                        </button>
-                    </form>
-                    <div id="suggestion-box"
-                        class="absolute left-0 mt-2 bg-black/50 h-10 z-20 w-8/10 sm:w-[30vh] lg:w-[40vh] rounded-2xl border border-white/20 shadow-lg overflow-auto hidden">
-                    </div>
-                </div>
-            </header>
+                            class="w-full rounded-full border border-gray-600 bg-white/30 px-4 py-2 focus:outline-none placeholder-gray-300">
 
-            <main
-                class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-col-3 gap-4 lg-gap-8 p-4 md:p-8 transition-opacity duration-500 mb-5">
-                <div class="lg:col-span-2 space-y-8">
-                    <div
-                        class="flex flex-col md:flex-row items-center p-6 md:p-8 rounded-3xl shadow-2xl text-shadow-[2px_2px_5px_rgb(0,0,0,0.4)] card">
-                        <div class="text-center md:text-left">
-                            <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
-                            <p id="currentDate" class="text-base sm:text-lg text-gray-300">
-                                Monday, September 07
-                            </p>
-                            <p id="currentTemp" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
-                                0 ℃
-                            </p>
-                            <p id="currentWeatherCondition" class="text-xl sm:text-2xl mt-2">
-                                Weather
-                            </p>
-                        </div>
-
-                        <img src="" alt="Weather icon" id="currentWeather-icon"
-                            class="w-32 sm:w-48 md:w-64 aspect-square mt-6 md:mt-0">
-                    </div>
-                    <div>
-                        <h3 class="text-2xl font-bold mb-4 text-shadow">
-                            5-Days Forecast
-                        </h3>
-                        <div id="forecast-container"
-                            class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-2 sm:gap-4">
+                        <!-- Suggestion box aligned with input -->
+                        <div id="suggestion-box"
+                            class="absolute left-0 mt-2 w-full bg-black/70 backdrop-blur-md rounded-md border border-white/20 shadow-lg hidden">
                         </div>
                     </div>
+
+                    <button type="submit" id="search-btn"
+                        class="bg-blue-500 rounded-xl py-1 p-3 sm:px-2 text-white hover:bg-blue-600 cursor-pointer"
+                        title="Search cities">
+                        <span class="hidden lg:inline">Search</span>
+                        <span class="inline lg:hidden"><img src="./assets/icons/search.svg" alt="Search button"></span>
+                    </button>
+
+                    <button type="button" id="currentLocation-btn"
+                        class="bg-red-500 rounded-xl py-1 p-3 sm:px-2 hover:bg-red-600 cursor-pointer" title="Use my location">
+                        <span class="hidden lg:inline">Use my location</span>
+                        <span class="inline lg:hidden"><img src="./assets/icons/Location.svg"
+                                alt="Use current location"></span>
+                    </button>
+
+                </form>
+            </div>
+        </header>
+
+        <main class="w-full grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-8 p-4 md:p-8">
+            <div class="lg:col-span-2 space-y-2 flex flex-col-reverse lg:flex-col">
+                <div
+                    class="flex flex-col md:flex-row justify-center items-center p-6 md:p-8 rounded-3xl shadow-2xl text-shadow-[2px_2px_5px_rgb(0,0,0,0.4)] card">
+                    <div class="text-center md:text-left">
+                        <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
+                        <p id="currentDate" class="text-base sm:text-lg text-gray-300">
+                            Monday, September 07
+                        </p>
+                        <p id="currentTemp" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
+                            0 ℃
+                        </p>
+                        <p id="currentWeatherCondition" class="text-xl sm:text-2xl mt-2">
+                            Weather
+                        </p>
+                    </div>
+
+                    <img src="" alt="Weather icon" id="currentWeather-icon"
+                        class="w-32 sm:w-48 md:w-64 aspect-square mt-6 md:mt-0">
                 </div>
 
-                <div class="flex flex-col">
-                    <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col space-y-5 card">
-                        <div class="grid grid-cols-2 gap-6 text-center">
-                            <div>
-                                <p class="text-gray-300 text-sm">Sunrise</p>
-                                <p id="sunriseTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                <div id="warningSection" class="mb-2 px-2 py-1.5 rounded-xl pl-6">
+                    <div class="flex items-center gap-x-4 mb-3">
+                        <div>
+                            <p id="warning-level" class="py-0.5 px-3 rounded-xl font-bold text-xs">??</p>
+                        </div>
+                        <h3 class=" text-lg lg:text-xl font-bold text-gray-200">Weather Condition</h3>
+
+
+                    </div>
+                    <p id="warning-description" class="text-base">Loading warning description ...</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col">
+                <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col space-y-5 card ">
+
+                    <div class="grid grid-cols-2 gap-6 text-center border-b border-white/20 pb-5">
+                        <div>
+                            <p class="text-gray-300 text-sm">Sunrise</p>
+                            <p id="sunriseTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                        </div>
+                        <div>
+                            <p class="text-gray-300 text-sm">Sunset</p>
+                            <p id="sunsetTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                        </div>
+                    </div>
+                    <div class="pt-4 space-y-4 text-base lg:text-lg">
+                        <!-- Weather Details -->
+                        <div class="flex items-center justify-between ">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
+                                <p class="text-slate-200">Humidity</p>
                             </div>
-                            <div>
-                                <p class="text-gray-300 text-sm">Sunset</p>
-                                <p id="sunsetTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
-                            </div>
+                            <span id="humidity">--%</span>
                         </div>
 
-                        <div class="border-t border-white/20 pt-5 space-y-4 text-base lg:text-lg">
-                            <!-- Weather Details -->
-                            <div class="flex items-center justify-between ">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Humidity</p>
-                                </div>
-                                <span id="humidity">--%</span>
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
+                                <p class="text-slate-200">Wind</p>
                             </div>
-
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Wind</p>
-                                </div>
-                                <span id="windSpeed">--km/h</span>
-                            </div>
-
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Feels Like</p>
-                                </div>
-                                <span id="feelsLike">--℃</span>
-                            </div>
-
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Pressure</p>
-                                </div>
-                                <span id="pressure">--hPa</span>
-                            </div>
-
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Visibility</p>
-                                </div>
-                                <span id="visibility">--km</span>
-                            </div>
-
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-center gap-2">
-                                    <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
-                                    <p class="text-slate-200">Air Quality</p>
-                                </div>
-                                <span id="airQuality"
-                                    class="font-semibold px-3 py-1 rounded-full text-sm">--km</span>
-                            </div>
+                            <span id="windSpeed">--km/h</span>
                         </div>
 
-
-                        <div class="border-t border-white/20 pt-5">
-                            <h3 class="text-lg font-bold mb-2">Health Recommendations</h3>
-                            <div>
-                                <p id="health-recommendations" class="text-gray-200 text-sm">Loading recommendations ...</p>
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
+                                <p class="text-slate-200">Feels Like</p>
                             </div>
+                            <span id="feelsLike">--℃</span>
+                        </div>
+
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
+                                <p class="text-slate-200">Pressure</p>
+                            </div>
+                            <span id="pressure">--hPa</span>
+                        </div>
+
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
+                                <p class="text-slate-200">Visibility</p>
+                            </div>
+                            <span id="visibility">--km</span>
+                        </div>
+
+                        <div class="flex items-center justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
+                                <p class="text-slate-200">Air Quality</p>
+                            </div>
+                            <span id="airQuality" class="font-semibold px-3 py-1 rounded-full text-sm">--km</span>
                         </div>
                     </div>
                 </div>
-            </main>
+            </div>
+        </main>
 
-
-        </div>
+        <section class="w-full p-4 md:p-8 mt-2">
+            <div>
+                <h3 class="text-3xl font-bold mb-4 text-shadow">
+                    Next 5-Days Forecast
+                </h3>
+                <div id="forecast-container" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-4 sm:gap-8 lg:gap-4">
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
