--- a/index.html
+++ b/index.html
@@ -40,32 +40,31 @@
             </div>
         </dialog>
 
-        <header
-            class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
-            <h1 class="min-w-44 text-2xl font-bold">🌤️ Weather App</h1>
-            <div class="w-full md:w-auto sm:place-items-end">
+        <header class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
+            <h1 class="flex-shrink-0 text-2xl font-bold">🌤️ Weather App</h1>
+
+            <div class="w-full md:w-auto md:place-items-end">
                 <form id="search-form" class="flex gap-x-3 font-semibold text-white w-full">
 
-                    <!-- Wrap input in relative container -->
-                    <div class="relative w-full md:w-[40vw] md:max-w-[510px]">
+                    <div class="relative w-full md:w-[40vw] lg:max-w-[510px]">
                         <input type="search" name="city-input" id="city-input" placeholder="Search for any city..."
                             class="w-full rounded-full border border-gray-600 bg-white/30 px-4 py-2 focus:outline-none placeholder-gray-300">
 
                         <!-- Suggestion box aligned with input -->
                         <div id="suggestion-box"
-                            class="absolute left-0 mt-2 w-full bg-black/70 backdrop-blur-md rounded-md border border-white/20 shadow-lg hidden">
+                            class="absolute left-0 mt-2 w-full bg-black/70 backdrop-blur-md rounded-md border border-white/20 shadow-lg hidden z-20">
                         </div>
                     </div>
 
                     <button type="submit" id="search-btn"
-                        class="bg-blue-500 rounded-xl py-1 p-3 sm:px-2 text-white hover:bg-blue-600 cursor-pointer"
+                        class="bg-blue-500 rounded-xl py-1 px-3 lg:px-2 text-white hover:bg-blue-600 cursor-pointer"
                         title="Search cities">
                         <span class="hidden lg:inline">Search</span>
                         <span class="inline lg:hidden"><img src="./assets/icons/search.svg" alt="Search button"></span>
                     </button>
 
                     <button type="button" id="currentLocation-btn"
-                        class="bg-red-500 rounded-xl py-1 p-3 sm:px-2 hover:bg-red-600 cursor-pointer"
+                        class="bg-red-500 rounded-xl py-1 px-3 lg:px-2 hover:bg-red-600 cursor-pointer"
                         title="Use my location">
                         <span class="hidden lg:inline">Use my location</span>
                         <span class="inline lg:hidden"><img src="./assets/icons/Location.svg"
@@ -127,7 +126,7 @@
 
                 <div class="grid grid-1 sm:grid-cols-6 lg:grid-cols-1 gap-y-4 text-base lg:text-lg">
                     <!-- Weather Details -->
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
                             <p class="text-slate-200">Humidity</p>
@@ -135,7 +134,7 @@
                         <span id="humidity" class="text-blue-400">--%</span>
                     </div>
 
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
                             <p class="text-slate-200">Wind</p>
@@ -143,7 +142,7 @@
                         <span id="windSpeed">--km/h</span>
                     </div>
 
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
                             <p class="text-slate-200">Feels Like</p>
@@ -151,7 +150,7 @@
                         <span id="feelsLike" class="text-yellow-400">--℃</span>
                     </div>
 
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
                             <p class="text-slate-200">Pressure</p>
@@ -159,7 +158,7 @@
                         <span id="pressure" class="text-red-400">--hPa</span>
                     </div>
 
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
                             <p class="text-slate-200">Visibility</p>
@@ -167,7 +166,7 @@
                         <span id="visibility" class="text-green-400">--km</span>
                     </div>
 
-                    <div class="flex sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
                         <div class="flex sm:flex-col lg:flex-row items-center gap-2">
                             <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
                             <p class="text-slate-200">Air Quality</p>
