--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         5-Days Forecast
                     </h3>
                     <div id="forecast-container"
-                        class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6 lg:gap-4 font-semibold">
+                        class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5 font-semibold">
                     </div>
                 </div>
             </section>
@@ -220,7 +220,7 @@
                         Recently Seached Cities
                     </h3>
                     <div id="searchedCity-container"
-                        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-5">
+                        class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5">
                     </div>
                 </div>
             </section>
