--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
 
                     <!-- Warning Section (for extreme weather alerts) -->
-                    <div id="warningSection">
+                    <div id="warningSection" class="flex justify-center items-center text-center rounded-b-3xl p-4 h-16 font-bold text-lg">
                         <p id="warning-description">Loading warning description ...</p>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     </div>
 
                     <!-- Other Weather Details -->
-                    <div class="grid grid-1 sm:grid-cols-6 lg:grid-cols-1 gap-y-4 text-base lg:text-lg">
+                    <div class="grid grid-1 sm:grid-cols-6 lg:grid-cols-1 gap-y-4 text-base lg:text-lg font-semibold">
 
                         <!-- Humidity -->
                         <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
