warning message classname fix

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
 
                     <!-- Warning Section (for extreme weather alerts) -->
-                    <div id="warningSection" class="flex justify-center items-center text-center rounded-b-3xl p-4 h-16 font-bold text-lg">
+                    <div id="warningSection">
                         <p id="warning-description">Loading warning description ...</p>
                     </div>
                 </div>
